--- a/css/responsive-index.css
+++ b/css/responsive-index.css
@@ -1,3 +1,70 @@
+@media screen and (max-device-width: 480px) {
+    #open-menu:active{
+        background-color: var(--hover-btn);
+        transition: all .2s ease;
+    }
+    .resp-menu i:active{
+        color: var(--hover-dark-btn);
+    }
+    .resp-menu li:active{
+        background-color: var(--hover-grey-btn);
+    }
+    .resp-menu li a:active{
+        color: var(--hover-dark-btn);
+    }
+    .resp-menu a.btn:active{
+        background-color: var(--hover-dark-btn);
+        transition: all .2s ease;
+    }
+    .resp-menu a.unfilled-btn:active{
+        border: none;
+        background-color: var(--hover-grey-btn);
+        color: black;
+        transition: all .2s ease;
+    }
+    header div.title h1:active{
+        transform: scale(1.05);
+        transition: all .2s ease;
+    }
+    .elements nav a:active{
+        color: var(--hover-tag);
+        transition: all .2s ease;
+    }
+    .elements div.buttons a:active{
+        background-color: var(--hover-btn);
+    }
+    .elements div.buttons a.unfilled-btn:active{
+        border: 1px solid var(--hover-btn);
+        background-color: var(--hover-btn);
+        color: white;
+        transition: all 0.2s ease;
+    }
+    #showcase .btn:active{
+        background-color: var(--hover-dark-btn);
+        transition: all .2s ease;
+    }
+    #showcase .unfilled-btn:active{
+        background-color: white;
+        color: var(--dark-color);
+    }
+    #benefits i:active{
+        color: var(--hover-btn);
+        transition: all .2s ease;
+    }
+    .card a:active{
+        background-color: var(--hover-dark-btn);
+        transition: all .2s ease;
+    }
+    footer h1:hover{
+        transform: scale(1.05);
+        transition: all .2s ease;
+    }
+    footer i:hover{
+        color: var(--hover-btn);
+        transition: all .2s ease;
+    }
+}
+
 @media screen and (max-width:900px) {
     /* Responsive Menu */
     #open-menu{
